Swift Path Name change

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>QuickPath</title>
+  <title>SwiftPath</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>QuickPath</h1>
+      <h1>SwiftPath</h1>
       <p class="tagline">Navigate paths across domains</p>
     </header>
     
