--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -55,6 +55,30 @@
     </div>
   </div>
   
+  <!-- Edit Name Modal -->
+  <div id="editNameModal" class="modal-overlay" style="display: none;">
+    <div class="modal">
+      <div class="modal-header">
+        <h3>Edit Path Name</h3>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="editNameInput">Path Name:</label>
+          <input type="text" id="editNameInput" class="modal-input" maxlength="100" placeholder="Enter path name">
+        </div>
+        <div class="form-group">
+          <label>Path URL:</label>
+          <div id="editPathUrl" class="path-url-display"></div>
+        </div>
+        <div id="editNameError" class="error-message" style="display: none;"></div>
+      </div>
+      <div class="modal-footer">
+        <button id="cancelEditName" class="btn btn-secondary">Cancel</button>
+        <button id="saveEditName" class="btn btn-primary">Save</button>
+      </div>
+    </div>
+  </div>
+  
   <input type="file" id="importFile" accept=".json" style="display: none;">
   
   <script src="popup.js"></script>
