Update Privacy Policy date, refine README, enhance popup styles, and improve path item display

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,8 +9,13 @@
 <body>
   <div class="container">
     <header>
-      <h1>SwiftPath</h1>
-      <p class="tagline">Navigate paths across domains</p>
+      <div class="header-content">
+        <img src="/icons/icon-48.png" alt="SwiftPath" class="app-icon">
+        <div class="header-text">
+          <h1>Swift Path</h1>
+          <p class="tagline">Navigate paths across domains</p>
+        </div>
+      </div>
     </header>
     
     <div class="paths-section">
@@ -22,6 +27,7 @@
         </div>
     
         <div class="legend">
+          <span class="legend-item">Hover to see URL</span>
           <span class="legend-item">→ Same tab</span>
           <span class="legend-item">⧉ New tab</span>
           <span class="legend-item">× Delete</span>
