Add contact section with links to email and privacy policy

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -60,6 +60,19 @@
       <button id="exportPaths" class="btn-secondary">Export</button>
       <button id="importPaths" class="btn-secondary">Import</button>
     </div>
+
+    <!-- Contact Us Section -->
+    <div class="contact-section">
+      <div class="contact-links">
+        <a href="mailto:rohithreddy24@hotmail.com" class="contact-link" title="Contact Us">
+          📧 Contact Us
+        </a>
+        <span class="separator">|</span>
+        <a href="https://github.com/Rohith24/SwiftPath/blob/main/PRIVACY_POLICY.md" id="privacyPolicy" class="privacy-link" title="Privacy Policy" target="_blank">
+          🔒 Privacy Policy
+        </a>
+      </div>
+    </div>
   </div>
   
   <!-- Edit Name Modal -->
